--- a/EN/index_en.html
+++ b/EN/index_en.html
@@ -1,116 +1,163 @@
 ---
 layout: moje-sablona_EN.njk
-title: St. Raphael Revival
+title: St Raphael Revive
 ---
 
+<section class="introduction">
+  <div class="introduction__content">
+    <h1>Mobile massages in London</h1>
 
-      <section class="introduction">
-        <div class="introduction__content">
+    <p>Treat yourself with a massage at your home.</p>
 
-          <h1>Mobile massages in London</h1>
+    <p>
+      I am a mobile certified massage therapist that offers health, sport or
+      prenatal massages tailored to your needs and wishes.
+    </p>
 
-          <p>Treat yourself with a massage at your home.</p>
+    <p>
+      I will soon offer baby massage lessons when I will teach mothers to warm
+      up and stretch bodies of their babies.
+    </p>
 
-          <p>I am a mobile certified massage therapist that offers health, sport or prenatal massages tailored to your needs and wishes.</p>
+    <p>
+      10% of each massage will be donated to a charity. Selection of a specific
+      charity will be available soon.
+    </p>
+  </div>
+</section>
 
-          <p>I will soon offer baby massage lessons when I will teach mothers to warm up and stretch bodies of their babies.</p>
-          
-          <p>10% of each massage will be donated to a charity. Selection of a specific charity will be available soon.</p>
-        </div>
-      </section>
+<div class="introduction__slogan">
+  <h1>Journey in health</h1>
+</div>
 
-      <section class="introduction__testimonials">
-          <h1>Testimonials</h1>
+<section class="introduction__testimonials">
+  <h1>Testimonials</h1>
 
-          <p>I am happy when my clients are satisfied with my treatments. A selections of testimonials can be seen below.</p>
+  <p>
+    I am happy when my clients are satisfied with my treatments. A selections of
+    testimonials can be seen below.
+  </p>
 
-          <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Malika S.</p>
-                    <p>Jara is neat and skilled. I had a 90 minute massage and it felt relaxing . She is thorough and very good at making sure the pressure feels just right.</p>
-                  </div>
-                </li>
-
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Augustína V.</p>
-                    <p>Jaroslava always gives me a great back and shoulders massage. I have been receiving massages from her for years and I am always satisfied.</p>
-                  </div>
-                </li>
-
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Maarta C.</p>
-                    <p>Got to know her through a friend who has been saying wonderful things. For years I struggle with backpain, and after only one session, the change is so noticeable. Absolutely wonderful woman, proffesional attitude, great care of higene during Covid.</p>
-                  </div>
-                </li>
-
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Emma M.</p>
-                    <p>Slava is truly excellent! Highly recommend her specially her lymphatic drainage and pregnancy massages!</p>
-                  </div>
-                </li>
-
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Jana E.</p>
-                    <p>I had a massage by Jaroslava through Muscle Whisperer campaign. A friend suggested it and I couldn’t be more grateful. Jaroslava has magic hands which really help my back spasms as well as the rest of the body. Absolutely rejuvenating experience. Would definitely recommend.</p>
-                  </div>
-                </li>
-
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Malika S.</p>
-                    <p>Jara is a complete professional who regularly gives me a really good sports massage. I recommend her highly to all those who are looking for one.</p>
-                  </div>
-                </li>
-
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Natasha K.</p>
-                    <p>Friendly service. Fantastic quality. Amazing massage. Great value for money.</p>
-                  </div>
-                </li>
-
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Danielle A.</p>
-                    <p>Lovely massage everytime. Thank you. Would highly recommend.</p>
-                  </div>
-                </li>
-
-                <li class="glide__slide">
-                  <div class="testimonials__selection">
-                    <p class="testimonials__name">Edita K.</p>
-                    <p>As always - very good treatment, Jara has been very thorough, caring and professional. She has been our therapist for almost 3 years. Thank you very much!</p>
-                  </div>
-                </li>
-
-              </ul>
-            </div>
-
-
-            <div class="glide__arrows" data-glide-el="controls">
-              <button class="glide__arrow glide__arrow--left" data-glide-dir="<">←</button>
-              <button class="glide__arrow glide__arrow--right" data-glide-dir=">">→</button>
-            </div>
-
-            <div class="glide__bullets" data-glide-el="controls[nav]">
-              <button class="glide__bullet" data-glide-dir="=1"></button>
-              <button class="glide__bullet" data-glide-dir="=2"></button>
-              <button class="glide__bullet" data-glide-dir="=3"></button>
-              <button class="glide__bullet" data-glide-dir="=4"></button>
-              <button class="glide__bullet" data-glide-dir="=5"></button>
-              <button class="glide__bullet" data-glide-dir="=6"></button>
-              <button class="glide__bullet" data-glide-dir="=7"></button>
-              <button class="glide__bullet" data-glide-dir="=8"></button>
-              <button class="glide__bullet" data-glide-dir="=9"></button>
-            </div>
-
+  <div class="glide">
+    <div class="glide__track" data-glide-el="track">
+      <ul class="glide__slides">
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Malika S.</p>
+            <p>
+              Jara is neat and skilled. I had a 90 minute massage and it felt
+              relaxing . She is thorough and very good at making sure the
+              pressure feels just right.
+            </p>
           </div>
+        </li>
 
-      </section>
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Augustína V.</p>
+            <p>
+              Jaroslava always gives me a great back and shoulders massage. I
+              have been receiving massages from her for years and I am always
+              satisfied.
+            </p>
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Maarta C.</p>
+            <p>
+              Got to know her through a friend who has been saying wonderful
+              things. For years I struggle with backpain, and after only one
+              session, the change is so noticeable. Absolutely wonderful woman,
+              proffesional attitude, great care of higene during Covid.
+            </p>
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Emma M.</p>
+            <p>
+              Slava is truly excellent! Highly recommend her specially her
+              lymphatic drainage and pregnancy massages!
+            </p>
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Jana E.</p>
+            <p>
+              I had a massage by Jaroslava through Muscle Whisperer campaign. A
+              friend suggested it and I couldn’t be more grateful. Jaroslava has
+              magic hands which really help my back spasms as well as the rest
+              of the body. Absolutely rejuvenating experience. Would definitely
+              recommend.
+            </p>
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Malika S.</p>
+            <p>
+              Jara is a complete professional who regularly gives me a really
+              good sports massage. I recommend her highly to all those who are
+              looking for one.
+            </p>
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Natasha K.</p>
+            <p>
+              Friendly service. Fantastic quality. Amazing massage. Great value
+              for money.
+            </p>
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Danielle A.</p>
+            <p>Lovely massage everytime. Thank you. Would highly recommend.</p>
+          </div>
+        </li>
+
+        <li class="glide__slide">
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Edita K.</p>
+            <p>
+              As always - very good treatment, Jara has been very thorough,
+              caring and professional. She has been our therapist for almost 3
+              years. Thank you very much!
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="glide__arrows" data-glide-el="controls">
+      <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+        ←
+      </button>
+      <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+        →
+      </button>
+    </div>
+
+    <div class="glide__bullets" data-glide-el="controls[nav]">
+      <button class="glide__bullet" data-glide-dir="=1"></button>
+      <button class="glide__bullet" data-glide-dir="=2"></button>
+      <button class="glide__bullet" data-glide-dir="=3"></button>
+      <button class="glide__bullet" data-glide-dir="=4"></button>
+      <button class="glide__bullet" data-glide-dir="=5"></button>
+      <button class="glide__bullet" data-glide-dir="=6"></button>
+      <button class="glide__bullet" data-glide-dir="=7"></button>
+      <button class="glide__bullet" data-glide-dir="=8"></button>
+      <button class="glide__bullet" data-glide-dir="=9"></button>
+    </div>
+  </div>
+</section>
