--- a/kontakt.html
+++ b/kontakt.html
@@ -3,44 +3,45 @@ layout: moje-sablona_CZ.njk
 title: Kontakt
 ---
 
-
 <section>
-    <h1>Otevírací doba</h1>
-    <p>Nemám stanovené otevírací hodiny. Pracuji každý den včetně víkendů a ráda se přizpůsobím Vašemu nejvhodnějšímu termínu.</p>
+  <h1>Otevírací doba</h1>
+  <p>
+    Nemám stanovené otevírací hodiny. Pracuji každý den včetně víkendů a ráda se
+    přizpůsobím Vašemu nejvhodnějšímu termínu.
+  </p>
 
-    <h1>Dotazy</h1>
-    <p>Pokud máte jakékoliv otázky nebo byste si rádi zarezervovali masáž, neváhejte mě kontaktovat na mé e-mailové adrese či na telefon.</p>
+  <h1>Dotazy</h1>
+  <p>
+    Pokud máte jakékoliv otázky nebo byste si rádi zarezervovali masáž,
+    neváhejte mě kontaktovat na mé e-mailové adrese či na telefon.
+  </p>
 
-    <h1>Recenze</h1>
-    <p>Těší mě, když jste s mými službami spokojeni. Vítám ale každou zpětnou vazbu, abych se Vám mohlo v budoucnosti lépe věnovat. Pošlete mi prosím Vaši recenzi na e-mail či pomocí SMS.</p>
+  <h1>Recenze</h1>
+  <p>
+    Těší mě, když jste s mými službami spokojeni. Vítám ale každou zpětnou
+    vazbu, abych se Vám mohlo v budoucnosti lépe věnovat. Pošlete mi prosím Vaši
+    recenzi na e-mail či pomocí SMS.
+  </p>
 </section>
 
 <section class="contact">
-    <div class="contact__info grid">
-        <div class="contact__title">
-            <h2>Telefon</h2>
-            <p>+44 739 200 48 73</p>
-        </div>
-
-
-        <div class="contact__title">
-            <h2>E-mail</h2>
-            <p><a href="mailto:jaroslavad26@gmail.com">jaroslavad26@gmail.com</a></p>
-        </div> 
-    
-        <div class="contact__title">
-            <h2>Číslo bankovního účtu</h2>
-            <p>1574096018/3030</p>
-        </div>
-
-        <div class="contact__title">
-            <h2>Dále přijímáme platby</h2>
-            <p>V hotovosti</p>
-            <p>Kreditní kartou</p>
-            <p>PayPal</p>
-            <p>Monzo</p>
-        </div>
-
+  <div class="contact__info grid">
+    <div class="contact__title">
+      <h2>Telefon</h2>
+      <p>+44 739 200 48 73</p>
     </div>
 
+    <div class="contact__title">
+      <h2>E-mail</h2>
+      <p><a href="mailto:jaroslavad26@gmail.com">jaroslavad26@gmail.com</a></p>
+    </div>
+
+    <div class="contact__title">
+      <h2>Dále přijímáme platby</h2>
+      <p>V hotovosti</p>
+      <p>Kreditní kartou</p>
+      <p>PayPal</p>
+      <p>Monzo</p>
+    </div>
+  </div>
 </section>
