--- a/EN/aboutme.html
+++ b/EN/aboutme.html
@@ -4,25 +4,38 @@ title: About me
 ---
 
 <section class="about grid">
-  <div class="about__image">
-  </div>
-  
+  <div class="about__image"></div>
+
   <div class="about__content">
     <h1>About me</h1>
 
-    <p>Hi. I am Jara, a mobile massage therapist (Diploma ITEC, BTEC) based in London. Furthermore, I am a member of the FHT Assossiation (Federation of Holistic Therapists) and CNHC (Complementary and Natural Healthcare Council)</p>
+    <p>
+      Hi. I am Jara, a mobile massage therapist (Diploma ITEC, BTEC) based in
+      London. Furthermore, I am a member of the FHT Assossiation (Federation of
+      Holistic Therapists) and CNHC (Complementary and Natural Healthcare
+      Council)
+    </p>
 
-    <p>My background is in healthcare. I have practiced complementary therapy for 9 years, building experiences by working with mobile massage agencies, spas, charities as well as in elderly units. My background is in healthcare. </p>
-  
-    <p>It is my passion to support clients of different ages with a variety of challenges, without excluding anybody.</p>
-  
-    <p>From time to time, I offer my skills to charities on sport events like London Marathon, Pink Rainbow, 10km British Run.</p>
-  
-    <p>I believe that everyone is original so tell me your story and we can create a right treatment for you. I'm looking forward to seeing you soon.</p>
+    <p>
+      My background is in healthcare. I have practiced complementary therapy for
+      9 years, building experiences by working with mobile massage agencies,
+      spas, charities as well as in elderly units. My background is in
+      healthcare.
+    </p>
+
+    <p>
+      It is my passion to support clients of different ages with a variety of
+      challenges, without excluding anybody.
+    </p>
+
+    <p>
+      From time to time, I offer my skills to charities on sport events like
+      London Marathon, Pink Rainbow, 10km British Run.
+    </p>
+
+    <p>
+      I believe that everyone is original so tell me your story and we can
+      create a right treatment for you. I'm looking forward to seeing you soon.
+    </p>
   </div>
-
-
-  
-  
 </section>
-
