--- a/EN/index_en.html
+++ b/EN/index_en.html
@@ -19,16 +19,9 @@ title: St Raphael Revive
       up and stretch bodies of their babies.
     </p>
 
-    <p>
-      10% of each massage will be donated to a charity. Selection of a specific
-      charity will be available soon.
-    </p>
+    <h1>My slogan is: "Journey in health"</h1>
   </div>
 </section>
-
-<div class="introduction__slogan">
-  <h1>Journey in health</h1>
-</div>
 
 <section class="introduction__testimonials">
   <h1>Testimonials</h1>
