--- a/index.html
+++ b/index.html
@@ -19,16 +19,9 @@ title: St Raphael Revive
       zahřát a protáhnout tělíčka svých miminek.
     </p>
 
-    <p>
-      10% z každé ceny masáže daruji na charitu. Výběr charity je zatím v
-      procesu a bude brzy upřesněna.
-    </p>
+    <h1>Můj slogan je "Cesta ku zdraví"</h1>
   </div>
 </section>
-
-<div class="introduction__slogan">
-  <h1>Cesta ku zdraví</h1>
-</div>
 
 <section class="introduction__testimonials">
   <h1>Hodnocení klientů</h1>
