--- a/EN/prices.html
+++ b/EN/prices.html
@@ -4,91 +4,97 @@ title: Prices
 ---
 
 <section>
-    <div class="pricing">
-        <h1>Price of massages</h1>
+  <div class="pricing">
+    <h1>Massages</h1>
 
-        <table class="pricing__massages">
-            <tr>
-                <th>Duration</th>
-                <th class="pricing__price">Price</th>
-            </tr>
+    <table class="pricing__massages">
+      <tr>
+        <th>Duration</th>
+        <th class="pricing__price">Price</th>
+      </tr>
 
-            <tr>
-                <td>60 min</td>
-                <td class="pricing__price">60 £</td>
-            </tr>
+      <tr>
+        <td>60 min</td>
+        <td class="pricing__price">60 £</td>
+      </tr>
 
-            <tr>
-                <td>90 min</td>
-                <td class="pricing__price">85 £</td>
-            </tr>
+      <tr>
+        <td>90 min</td>
+        <td class="pricing__price">85 £</td>
+      </tr>
 
-            <tr>
-                <td>120 min</td>
-                <td class="pricing__price">110 £</td>
-            </tr>
-        </table>
+      <tr>
+        <td>120 min</td>
+        <td class="pricing__price">110 £</td>
+      </tr>
+    </table>
+  </div>
 
-        <p>10% of each massage will be donated to a charity. Selection of a specific charity will be available soon.</p>
+  <div class="pricing">
+    <h1>Baby massage lesson</h1>
 
-    </div>
+    <table class="pricing__lessons">
+      <tr>
+        <th>Duration</th>
+        <th class="pricing__price">Price</th>
+      </tr>
 
-    <div class="pricing">
-        <h1>Prices of baby massage lessons</h1>
+      <tr>
+        <td>60 min</td>
+        <td class="pricing__price">65 £</td>
+      </tr>
+    </table>
 
-        <table class="pricing__lessons">
-            <tr>
-                <th>Duration</th>
-                <th class="pricing__price">Price</th>
-            </tr>
+    <p>
+      I will soon offer baby massage lessons when I will teach mothers to warm
+      up and stretch bodies of their babies.
+    </p>
+  </div>
 
-            <tr>
-                <td>60 min</td>
-                <td class="pricing__price">65 £</td>
-            </tr>
-        </table>
-    
+  <div class="pricing">
+    <h1>Cooperation & Party Massage</h1>
 
-        <p>I will soon offer baby massage lessons when I will teach mothers to warm up and stretch bodies of their babies.</p>
-    </div>  
+    <table class="pricing__massages">
+      <tr>
+        <th>Duration</th>
+        <th class="pricing__price">Price</th>
+      </tr>
 
-    <div class="pricing">
-        <h1>Price of group massages</h1>
+      <tr>
+        <td>60 min</td>
+        <td class="pricing__price">80 £</td>
+      </tr>
 
-        <table class="pricing__massages">
-            <tr>
-                <th>Duration</th>
-                <th class="pricing__price">Price</th>
-            </tr>
+      <tr>
+        <td>90 min</td>
+        <td class="pricing__price">100 £</td>
+      </tr>
 
-            <tr>
-                <td>60 min</td>
-                <td class="pricing__price">60 £</td>
-            </tr>
+      <tr>
+        <td>120 min</td>
+        <td class="pricing__price">130 £</td>
+      </tr>
 
-            <tr>
-                <td>90 min</td>
-                <td class="pricing__price">90 £</td>
-            </tr>
+      <tr>
+        <td>150 min</td>
+        <td class="pricing__price">150 £</td>
+      </tr>
+    </table>
 
-            <tr>
-                <td>120 min</td>
-                <td class="pricing__price">120 £</td>
-            </tr>
+    <p>
+      I offer to corporations and groups massages at your chosen destination or
+      office. Massage is provided sitting on a chair and I treat each person 15
+      - 20 mins. Minimal booking time is 1 hour. It is suitable for birthday
+      parties, engagement party, hen / bridal party or baby showers.
+    </p>
+  </div>
 
-            <tr>
-                <td>150 min</td>
-                <td class="pricing__price">150 £</td>
-            </tr>
-        </table>
-
-        <p>I offer to corporations and groups massages at your chosen destination or office. Massage is provided sitting on a chair and I treat each person 15 - 20 mins. Minimal booking time is 1 hour. It is suitable for birthday parties, engagement party, hen / bridal party or baby showers.</p>
-
-    </div>
-
-        <p class="pricing__special-info">Gift vouchers are also available for all therapies.</p>
-        <p class="pricing__special-info">It is possible to pay in cash, by a bank transfer, credit card, PayPal or Monzo. Information for a bank transfer is available in <a class="pricing__link" href="/EN/contact.html">Contact.</a></p>
-  
-
-
+  <p class="pricing__special-info">
+    Gift vouchers are also available for all therapies.
+  </p>
+  <p class="pricing__special-info">
+    It is possible to pay in cash, by a bank transfer, credit card, PayPal or
+    Monzo. Information for a bank transfer is available in
+    <a class="pricing__link" href="/EN/contact.html">Contact.</a>
+  </p>
 </section>
