--- a/cenik.html
+++ b/cenik.html
@@ -4,91 +4,97 @@ title: Ceník
 ---
 
 <section>
-    <div class="pricing">
-        <h1>Cena masáží</h1>
+  <div class="pricing">
+    <h1>Masáže</h1>
 
-        <table class="pricing__massages">
-            <tr>
-                <th>Doba masáže</th>
-                <th class="pricing__price">Cena</th>
-            </tr>
+    <table class="pricing__massages">
+      <tr>
+        <th>Doba masáže</th>
+        <th class="pricing__price">Cena</th>
+      </tr>
 
-            <tr>
-                <td>60 min</td>
-                <td class="pricing__price">60 £</td>
-            </tr>
+      <tr>
+        <td>60 min</td>
+        <td class="pricing__price">80 £</td>
+      </tr>
 
-            <tr>
-                <td>90 min</td>
-                <td class="pricing__price">85 £</td>
-            </tr>
+      <tr>
+        <td>90 min</td>
+        <td class="pricing__price">100 £</td>
+      </tr>
 
-            <tr>
-                <td>120 min</td>
-                <td class="pricing__price">110 £</td>
-            </tr>
-        </table>
+      <tr>
+        <td>120 min</td>
+        <td class="pricing__price">130 £</td>
+      </tr>
+    </table>
+  </div>
 
-        <p>10% z každé ceny masáže daruji na charitu. Výběr charity je zatím v procesu a bude brzy upřesněna.</p>
+  <div class="pricing">
+    <h1>Lekce masírování miminek</h1>
 
-    </div>
+    <table class="pricing__lessons">
+      <tr>
+        <th>Doba lekce</th>
+        <th class="pricing__price">Cena</th>
+      </tr>
 
-    <div class="pricing">
-        <h1>Cena lekcí masírování miminek</h1>
+      <tr>
+        <td>60 min</td>
+        <td class="pricing__price">65 £</td>
+      </tr>
+    </table>
 
-        <table class="pricing__lessons">
-            <tr>
-                <th>Doba lekce</th>
-                <th class="pricing__price">Cena</th>
-            </tr>
+    <p>
+      Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak
+      zahřát a protáhnout tělíčka svých miminek.
+    </p>
+  </div>
 
-            <tr>
-                <td>60 min</td>
-                <td class="pricing__price">65 £</td>
-            </tr>
-        </table>
-    
+  <div class="pricing">
+    <h1>Firemní a párty masáže</h1>
 
-        <p>Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak zahřát a protáhnout tělíčka svých miminek.</p>
-    </div>  
+    <table class="pricing__massages">
+      <tr>
+        <th>Doba masáže</th>
+        <th class="pricing__price">Cena</th>
+      </tr>
 
-    <div class="pricing">
-        <h1>Cena skupinových masáží</h1>
+      <tr>
+        <td>60 min</td>
+        <td class="pricing__price">60 £</td>
+      </tr>
 
-        <table class="pricing__massages">
-            <tr>
-                <th>Doba masáže</th>
-                <th class="pricing__price">Cena</th>
-            </tr>
+      <tr>
+        <td>90 min</td>
+        <td class="pricing__price">90 £</td>
+      </tr>
 
-            <tr>
-                <td>60 min</td>
-                <td class="pricing__price">60 £</td>
-            </tr>
+      <tr>
+        <td>120 min</td>
+        <td class="pricing__price">120 £</td>
+      </tr>
 
-            <tr>
-                <td>90 min</td>
-                <td class="pricing__price">90 £</td>
-            </tr>
+      <tr>
+        <td>150 min</td>
+        <td class="pricing__price">150 £</td>
+      </tr>
+    </table>
 
-            <tr>
-                <td>120 min</td>
-                <td class="pricing__price">120 £</td>
-            </tr>
+    <p>
+      Pro firmy či skupiny nabízím masáže přímo u Vás či ve Vaší kanceláři.
+      Masáž se provádí v sedě na židli a každé osobě se věnuji 15 - 20 minut.
+      Minimální doba masírování pro rezervaci je 1 hodina. Hodí se např. na
+      narozeninové oslavy, zásnubní oslavy, rozlučky se svobodou.
+    </p>
+  </div>
 
-            <tr>
-                <td>150 min</td>
-                <td class="pricing__price">150 £</td>
-            </tr>
-        </table>
-
-        <p>Pro firmy či skupiny nabízím masáže přímo u Vás či ve Vaší kanceláři. Masáž se provádí v sedě na židli a každé osobě se věnuji 15 - 20 minut. Minimální doba masírování pro rezervaci je 1 hodina. Hodí se např. na narozeninové oslavy, zásnubní oslavy, rozlučky se svobodou.</p>
-
-    </div>
-
-        <p class="pricing__special-info">Je možné zakoupit i dárkové poukazy na libovolnou délku masáže či terapie.</p>
-        <p class="pricing__special-info">Platby je možné provádět bankovním převodem, v hotovosti, kreditní kartou, prostřednictívm PayPal i Monzo. Informace ohledně bankovního převodu najdete v sekci <a class="pricing__link" href="/kontakt/">Kontakt.</a></p>
-  
-
-
+  <p class="pricing__special-info">
+    Je možné zakoupit i dárkové poukazy na libovolnou délku masáže či terapie.
+  </p>
+  <p class="pricing__special-info">
+    Platby je možné provádět bankovním převodem, v hotovosti, kreditní kartou,
+    prostřednictívm PayPal i Monzo. Informace ohledně bankovního převodu najdete
+    v sekci <a class="pricing__link" href="/kontakt/">Kontakt.</a>
+  </p>
 </section>
