--- a/EN/index_en.html
+++ b/EN/index_en.html
@@ -5,7 +5,7 @@ title: St Raphael Revive
 
 <section class="introduction">
   <div class="introduction__content">
-    <h1>Mobile massages in London</h1>
+    <h1>Mobile massages in London / Journey in health</h1>
 
     <p>Treat yourself with a massage at your home.</p>
 
@@ -18,18 +18,11 @@ title: St Raphael Revive
       I will soon offer baby massage lessons when I will teach mothers to warm
       up and stretch bodies of their babies.
     </p>
-
-    <h1>My slogan is: "Journey in health"</h1>
   </div>
 </section>
 
 <section class="introduction__testimonials">
-  <h1>Testimonials</h1>
-
-  <p>
-    I am happy when my clients are satisfied with my treatments. A selections of
-    testimonials can be seen below.
-  </p>
+  <h1>Reviews</h1>
 
   <div class="glide">
     <div class="glide__track" data-glide-el="track">
