--- a/EN/prices.html
+++ b/EN/prices.html
@@ -15,17 +15,17 @@ title: Prices
 
       <tr>
         <td>60 min</td>
-        <td class="pricing__price">60 £</td>
+        <td class="pricing__price">80 £</td>
       </tr>
 
       <tr>
         <td>90 min</td>
-        <td class="pricing__price">85 £</td>
+        <td class="pricing__price">100 £</td>
       </tr>
 
       <tr>
         <td>120 min</td>
-        <td class="pricing__price">110 £</td>
+        <td class="pricing__price">130 £</td>
       </tr>
     </table>
   </div>
@@ -41,7 +41,7 @@ title: Prices
 
       <tr>
         <td>60 min</td>
-        <td class="pricing__price">65 £</td>
+        <td class="pricing__price">80 £</td>
       </tr>
     </table>
 
@@ -67,17 +67,17 @@ title: Prices
 
       <tr>
         <td>90 min</td>
-        <td class="pricing__price">100 £</td>
+        <td class="pricing__price">120 £</td>
       </tr>
 
       <tr>
         <td>120 min</td>
-        <td class="pricing__price">130 £</td>
+        <td class="pricing__price">160 £</td>
       </tr>
 
       <tr>
-        <td>150 min</td>
-        <td class="pricing__price">150 £</td>
+        <td>Every additional 30 min</td>
+        <td class="pricing__price">40 £</td>
       </tr>
     </table>
 
