--- a/EN/services.html
+++ b/EN/services.html
@@ -3,77 +3,131 @@ layout: moje-sablona_EN.njk
 title: Services
 ---
 
-
 <section class="services">
-  
-    <h1>Therapies practised</h1>
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Pregnancy_massage.jpg"
+      alt="Masáž 5"
+    />
+    <div class="service__description">
+      <h2>Prenatal and postnatal massage</h2>
+      <p>I provide support to women during pregnancy and during childbirth.</p>
+      <p>
+        I can not only treat pregnant women with a relaxing massage
+        concentrating on back, belly and feet aches, but I can also teach your
+        partner to provide you with a massage.
+      </p>
+      <p>
+        The most comfortable position for expectant mothers is sideline
+        positioning with supportive, soft cushions used to alleviate the extra
+        strain on the lower back and pelvic areas when the pressure of massage
+        techniques are applied.
+      </p>
+    </div>
 
     <div class="service">
-      <img class="service__image" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Masáž 1">
+      <img
+        class="service__image"
+        src="/Images/Downloaded/massage-2768833_1920.jpg"
+        alt="Masáž 1"
+      />
       <div class="service__description">
         <h2>Deep tissue</h2>
-        <p>Deep tissue massage is suitable for all people with problems with mustles of the whole body.</p>
-        <p>One of the most common reasons for people to have a deep tissue massage is the general aches and pains that fall under the broad definition of rheumatic pains, aching joints and muscle spasms.</p>
-        <p>The main underlying cause of many symptoms manifested in the body is stress. </p>
+        <p>
+          Deep tissue massage is suitable for all people with problems with
+          mustles of the whole body.
+        </p>
+        <p>
+          One of the most common reasons for people to have a deep tissue
+          massage is the general aches and pains that fall under the broad
+          definition of rheumatic pains, aching joints and muscle spasms.
+        </p>
+        <p>
+          The main underlying cause of many symptoms manifested in the body is
+          stress.
+        </p>
       </div>
     </div>
 
     <div class="service">
-      <img class="service__image" src="/Images/Jaras/Hand_massage.jpg" alt="Masáž 2">
+      <img
+        class="service__image"
+        src="/Images/Downloaded/physio-1778029_1920.jpg"
+        alt="Masáž 2"
+      />
       <div class="service__description">
         <h2>Therapeutic massage</h2>
-        <p>Therapeutic massage can help to relieve stress, insomnia, tense muscles and back pain, and is believed by many to improve circulation and digestion, tone the skin and help eliminate toxins.</p>
-        <p>Music may also be used as an aid to achieving a relaxing treatment.</p>
+        <p>
+          Therapeutic massage can help to relieve stress, insomnia, tense
+          muscles and back pain, and is believed by many to improve circulation
+          and digestion, tone the skin and help eliminate toxins.
+        </p>
+        <p>
+          Music may also be used as an aid to achieving a relaxing treatment.
+        </p>
         <p>It is recommended for your body, mind and spirit.</p>
       </div>
     </div>
 
     <div class="service">
-      <img class="service__image" src="/Images/Jaras/Neck_massage.jpg" alt="Masáž 3">
+      <img
+        class="service__image"
+        src="/Images/Jaras/Neck_massage.jpg"
+        alt="Masáž 3"
+      />
       <div class="service__description">
         <h2>India head massage</h2>
-        <p>It is a great stress buster, and although we call it a head massage, we incorporate the back, shoulders and arms.</p>
-        <p>This treatment is good for corporate clients as it is non-invasive and you do not need to remove any clothing.</p>
-        <p>The physical benefits that can be gained: Ease tight muscles, releases shoulders, therefore improving posture.</p>
+        <p>
+          It is a great stress buster, and although we call it a head massage,
+          we incorporate the back, shoulders and arms.
+        </p>
+        <p>
+          This treatment is good for corporate clients as it is non-invasive and
+          you do not need to remove any clothing.
+        </p>
+        <p>
+          The physical benefits that can be gained: Ease tight muscles, releases
+          shoulders, therefore improving posture.
+        </p>
       </div>
     </div>
 
     <div class="service">
-      <img class="service__image" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Masáž 4">
+      <img
+        class="service__image"
+        src="/Images/Jaras/Hand_massage.jpg"
+        alt="Masáž 4"
+      />
       <div class="service__description">
         <h2>Manual lymphatic drainage</h2>
-        <p>This massage is based on Dr. Vodder techniques. Lymphatic drainage massages can benefit people with lymphedema, fibromyalgia, and other conditions.</p>
-        <p>It is a form of gentle massage that encourages the movement of lymph fluids around the body.</p>
-        <p>The fluid in the lymphatic system helps remove waste and toxins from the bodily tissues.</p>
+        <p>
+          This massage is based on Dr. Vodder techniques. Lymphatic drainage
+          massages can benefit people with lymphedema, fibromyalgia, and other
+          conditions.
+        </p>
+        <p>
+          It is a form of gentle massage that encourages the movement of lymph
+          fluids around the body.
+        </p>
+        <p>
+          The fluid in the lymphatic system helps remove waste and toxins from
+          the bodily tissues.
+        </p>
       </div>
     </div>
+  </div>
 
-    <div class="service">
-      <img class="service__image" src="/Images/Jaras/Pregnancy_massage.jpg" alt="Masáž 5">
-      <div class="service__description">
-        <h2>Prenatal and childbirth massage</h2>
-        <p>I provide support to women during pregnancy and during childbirth.</p>
-        <p>I can not only treat pregnant women with a relaxing massage concentrating on back, belly and feet aches, but I can also teach your partner to provide you with a massage.</p>
-        <p>The most comfortable position for expectant mothers is sideline positioning with supportive, soft cushions used to alleviate the extra strain on the lower back and pelvic areas when the pressure of massage techniques are applied.</p>
-      </div>
-    </div>
+  <h2>Other</h2>
+  <p>I offer many other services such as:</p>
 
-
-    <h2>Other</h2>
-    <p>I offer many other services such as: </p>
-    
-    <ul class="other-services">
-      <li>Holistic therapy</li>
-      <li>Ear Candeling</li>
-      <li>Support massage for elderly and people with specific issues</li>
-      <li>Oncology massage (coming soon)</li>
-      <li>Cupping</li>
-      <li>Massage for people with dementia</li>
-      <li>Lessons of baby massages (coming soon)</li>
-
-    </ul>
-
+  <ul class="other-services">
+    <li>Holistic therapy</li>
+    <li>Ear Candeling</li>
+    <li>Support massage for elderly and people with specific issues</li>
+    <li>Oncology massage (coming soon)</li>
+    <li>Cupping</li>
+    <li>Massage for people with dementia</li>
+    <li>Lessons of baby massages (coming soon)</li>
+  </ul>
 </section>
-
-
-
