--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: St Raphael Revive
 
 <section class="introduction">
   <div class="introduction__content">
-    <h1>Mobilní masáže v Londýně</h1>
+    <h1>Mobilní masáže v Londýně / Cesta ku zdraví</h1>
 
     <p>Nechte se namasírovat v pohodlí Vašeho domova.</p>
 
@@ -18,18 +18,11 @@ title: St Raphael Revive
       Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak
       zahřát a protáhnout tělíčka svých miminek.
     </p>
-
-    <h1>Můj slogan je "Cesta ku zdraví"</h1>
   </div>
 </section>
 
 <section class="introduction__testimonials">
-  <h1>Hodnocení klientů</h1>
-
-  <p>
-    Těší mě, když jsou moji klienti s masážemi spokojeni. Výběr z recenzí si
-    můžete přečíst níže.
-  </p>
+  <h1>Recenze</h1>
 
   <div class="glide">
     <div class="glide__track" data-glide-el="track">
