--- a/cenik.html
+++ b/cenik.html
@@ -41,7 +41,7 @@ title: Ceník
 
       <tr>
         <td>60 min</td>
-        <td class="pricing__price">65 £</td>
+        <td class="pricing__price">80 £</td>
       </tr>
     </table>
 
@@ -62,22 +62,22 @@ title: Ceník
 
       <tr>
         <td>60 min</td>
-        <td class="pricing__price">60 £</td>
+        <td class="pricing__price">80 £</td>
       </tr>
 
       <tr>
         <td>90 min</td>
-        <td class="pricing__price">90 £</td>
-      </tr>
-
-      <tr>
-        <td>120 min</td>
         <td class="pricing__price">120 £</td>
       </tr>
 
       <tr>
-        <td>150 min</td>
-        <td class="pricing__price">150 £</td>
+        <td>120 min</td>
+        <td class="pricing__price">160 £</td>
+      </tr>
+
+      <tr>
+        <td>Každých dalších 30 min</td>
+        <td class="pricing__price">40 £</td>
       </tr>
     </table>
 
