--- a/EN/services.html
+++ b/EN/services.html
@@ -8,10 +8,10 @@ title: Services
     <img
       class="service__image"
       src="/Images/Jaras/Pregnancy_massage.jpg"
-      alt="Masáž 5"
+      alt="Massage 5"
     />
     <div class="service__description">
-      <h2>Prenatal and postnatal massage</h2>
+      <h2>Supporting pregnancy with prenatal & birth massage</h2>
       <p>I provide support to women during pregnancy and during childbirth.</p>
       <p>
         I can not only treat pregnant women with a relaxing massage
@@ -29,8 +29,25 @@ title: Services
     <div class="service">
       <img
         class="service__image"
+        src="/Images/Jaras/Pregnancy_massage.jpg"
+        alt="Massage 5"
+      />
+      <div class="service__description">
+        <h2>Supporting young mum with postnatal massage and baby massage lesson</h2>
+        <p>XXXXXXXXXXXXXXXXXXXXXXX.</p>
+        <p>
+          XXXXXXXXXXXXXXXXXXXXx
+        </p>
+        <p>
+          XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        </p>
+      </div>
+
+    <div class="service">
+      <img
+        class="service__image"
         src="/Images/Downloaded/massage-2768833_1920.jpg"
-        alt="Masáž 1"
+        alt="Massage 1"
       />
       <div class="service__description">
         <h2>Deep tissue</h2>
@@ -54,7 +71,7 @@ title: Services
       <img
         class="service__image"
         src="/Images/Downloaded/physio-1778029_1920.jpg"
-        alt="Masáž 2"
+        alt="Massage 2"
       />
       <div class="service__description">
         <h2>Therapeutic massage</h2>
@@ -74,7 +91,7 @@ title: Services
       <img
         class="service__image"
         src="/Images/Jaras/Neck_massage.jpg"
-        alt="Masáž 3"
+        alt="Massage 3"
       />
       <div class="service__description">
         <h2>India head massage</h2>
@@ -97,7 +114,7 @@ title: Services
       <img
         class="service__image"
         src="/Images/Jaras/Hand_massage.jpg"
-        alt="Masáž 4"
+        alt="Massage 4"
       />
       <div class="service__description">
         <h2>Manual lymphatic drainage</h2>
