--- a/sluzby.html
+++ b/sluzby.html
@@ -11,7 +11,7 @@ title: Služby
       alt="Massage 5"
     />
     <div class="service__description">
-      <h2>Těhotenská a porodní masáž</h2>
+      <h2>Těhotenská a poporodní masáž</h2>
       <p>Poskytuji podporu těhotným ženám a ženám při porodu.</p>
       <p>
         Nejen že si mohou těhotné ženy dopřát masáž zaměřenou na bolesti zad,
@@ -21,6 +21,20 @@ title: Služby
         Nejpohodlnější polohou pro budoucí rodičky je poloha vleže na boku
         podepřená polšáři, abychom snížili namáhání zad a pánve.
       </p>
+    </div>
+  </div>
+
+  <div class="service">
+    <img
+      class="service__image"
+      src="/Images/Jaras/Pregnancy_massage.jpg"
+      alt="Massage 5"
+    />
+    <div class="service__description">
+      <h2>Podpora mladých matek poporodní masáží a lekce masáží miminek</h2>
+      <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+      <p>XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+      <p>XXXXXXXXXXXXXXXXXXXXXXX</p>
     </div>
   </div>
 
