--- a/EN/contact.html
+++ b/EN/contact.html
@@ -37,11 +37,10 @@ title: Contact
     </div>
 
     <div class="contact__title">
-      <h2>I also accept</h2>
+      <h2>Payment</h2>
       <p>Cash</p>
-      <p>Credit cards</p>
-      <p>PayPal</p>
-      <p>Monzo</p>
+      <p>Credit card</p>
+      <p>Bank transfer</p>
     </div>
   </div>
 </section>
