--- a/EN/services.html
+++ b/EN/services.html
@@ -19,7 +19,7 @@ title: Services
         partner to provide you with a massage.
       </p>
       <p>
-        The most comfortable position for expectant mothers is sideline
+        The most comfortable position for expecting mothers is sideline
         positioning with supportive, soft cushions used to alleviate the extra
         strain on the lower back and pelvic areas when the pressure of massage
         techniques are applied.
@@ -50,7 +50,7 @@ title: Services
         alt="Massage 1"
       />
       <div class="service__description">
-        <h2>Deep tissue</h2>
+        <h2>Deep tissue / Therapeutic massage</h2>
         <p>
           Deep tissue massage is suitable for all people with problems with
           mustles of the whole body.
@@ -67,23 +67,52 @@ title: Services
       </div>
     </div>
 
+
     <div class="service">
       <img
         class="service__image"
-        src="/Images/Downloaded/physio-1778029_1920.jpg"
-        alt="Massage 2"
+        src="/Images/Jaras/Hand_massage.jpg"
+        alt="Massage 4"
       />
       <div class="service__description">
-        <h2>Therapeutic massage</h2>
+        <h2>Manual lymphatic drainage</h2>
         <p>
-          Therapeutic massage can help to relieve stress, insomnia, tense
-          muscles and back pain, and is believed by many to improve circulation
-          and digestion, tone the skin and help eliminate toxins.
+          This massage is based on Dr. Vodder techniques. Lymphatic drainage
+          massages can benefit people with lymphedema, fibromyalgia, and other
+          conditions.
         </p>
         <p>
-          Music may also be used as an aid to achieving a relaxing treatment.
+          It is a form of gentle massage that encourages the movement of lymph
+          fluids around the body.
         </p>
-        <p>It is recommended for your body, mind and spirit.</p>
+        <p>
+          The fluid in the lymphatic system helps remove waste and toxins from
+          the bodily tissues.
+        </p>
+      </div>
+    </div>
+
+    <div class="service">
+      <img
+        class="service__image"
+        src="/Images/Jaras/Hand_massage.jpg"
+        alt="Massage 4"
+      />
+      <div class="service__description">
+        <h2>Facial massage</h2>
+        <!-- <p>
+          This massage is based on Dr. Vodder techniques. Lymphatic drainage
+          massages can benefit people with lymphedema, fibromyalgia, and other
+          conditions.
+        </p>
+        <p>
+          It is a form of gentle massage that encourages the movement of lymph
+          fluids around the body.
+        </p>
+        <p>
+          The fluid in the lymphatic system helps remove waste and toxins from
+          the bodily tissues.
+        </p>  -->
       </div>
     </div>
 
@@ -117,8 +146,8 @@ title: Services
         alt="Massage 4"
       />
       <div class="service__description">
-        <h2>Manual lymphatic drainage</h2>
-        <p>
+        <h2>Svedish massage</h2>
+        <!-- <p>
           This massage is based on Dr. Vodder techniques. Lymphatic drainage
           massages can benefit people with lymphedema, fibromyalgia, and other
           conditions.
@@ -130,7 +159,7 @@ title: Services
         <p>
           The fluid in the lymphatic system helps remove waste and toxins from
           the bodily tissues.
-        </p>
+        </p>  -->
       </div>
     </div>
   </div>
@@ -139,12 +168,8 @@ title: Services
   <p>I offer many other services such as:</p>
 
   <ul class="other-services">
-    <li>Holistic therapy</li>
-    <li>Ear Candeling</li>
-    <li>Support massage for elderly and people with specific issues</li>
-    <li>Oncology massage (coming soon)</li>
-    <li>Cupping</li>
-    <li>Massage for people with dementia</li>
-    <li>Lessons of baby massages (coming soon)</li>
+    <li>Hopi Ear Candeling</li>
+    <li>Oncology Massage</li>
+    <li>Massage for Elderly</li>
   </ul>
 </section>
