--- a/kontakt.html
+++ b/kontakt.html
@@ -37,11 +37,10 @@ title: Kontakt
     </div>
 
     <div class="contact__title">
-      <h2>Dále přijímáme platby</h2>
+      <h2>Přijímám platby</h2>
       <p>V hotovosti</p>
       <p>Kreditní kartou</p>
-      <p>PayPal</p>
-      <p>Monzo</p>
+      <p>Bankovní převod</p>
     </div>
   </div>
 </section>
