--- a/sluzby.html
+++ b/sluzby.html
@@ -45,7 +45,7 @@ title: Služby
       alt="Massage 1"
     />
     <div class="service__description">
-      <h2>Hloubková masáž</h2>
+      <h2>Hloubková masáž / Terapeutická masáž</h2>
       <p>
         Hloubková masáž je vhodná pro všechny s rozličnými problémy svalů celého
         těla.
@@ -58,50 +58,6 @@ title: Služby
       <p>
         Hlavním důvodem mnoha z výše uvedených symptomů promítajících se do těla
         je stres.
-      </p>
-    </div>
-  </div>
-
-  <div class="service">
-    <img
-      class="service__image"
-      src="/Images/Downloaded/physio-1778029_1920.jpg"
-      alt="Massage 2"
-    />
-    <div class="service__description">
-      <h2>Terapeutická masáž</h2>
-      <p>
-        Terapeutická masáž pomáhá snižovat stres, bojuje s nespavostí, napětí ve
-        svalech a bolestí zad. Pomáhá zlepšovat krevní oběh a trávení, napíná
-        pokožku a pomáhá odvádět toxiny z těla.
-      </p>
-      <p>
-        V pozadí může být puštěna hudba, která napomáhá navodit relaxující
-        atmosféru.
-      </p>
-      <p>Doporučujeme ji pro Vaše tělo, mysl i ducha.</p>
-    </div>
-  </div>
-
-  <div class="service">
-    <img
-      class="service__image"
-      src="/Images/Jaras/Neck_massage.jpg"
-      alt="Massage 3"
-    />
-    <div class="service__description">
-      <h2>Indická masáž hlavy</h2>
-      <p>
-        Velmi pomáhá snižovat stres a ačkoliv se nazývá masáž hlavy, zahrnujeme
-        i záda, ramena a paže.
-      </p>
-      <p>
-        Tato masáž je vhodná pro firemní klienty, jelikož není invazivní a není
-        třeba se svlékat.
-      </p>
-      <p>
-        Mezi fyzické výhody této masáže patří: uvolnění napjatých svalů,
-        uvolňuje ramena a tím i zlepšuje postoj těla.
       </p>
     </div>
   </div>
@@ -126,18 +82,79 @@ title: Služby
         Lymfatický systém pomáhá odstraňovat škodlivé látky a toxiny z těla.
       </p>
     </div>
+
+    <div class="service">
+      <img
+        class="service__image"
+        src="/Images/Jaras/Hand_massage.jpg"
+        alt="Massage 4"
+      />
+      <div class="service__description">
+        <h2>Masáž obličeje</h2>
+        <!-- <p>
+          Tato masáž je založena na technice Dr. Voddera. Lymfatická masáž pomáhá
+          lidem s lymfedémem, fibromyalgií a dalšími zdravotními problémy.
+        </p>
+        <p>
+          Jedná se o formu jemné masáže, která podporuje proudění lymfatické
+          tekutiny po těle.
+        </p>
+        <p>
+          Lymfatický systém pomáhá odstraňovat škodlivé látky a toxiny z těla.
+        </p> -->
+      </div>
+
+    <div class="service">
+      <img
+        class="service__image"
+        src="/Images/Jaras/Neck_massage.jpg"
+        alt="Massage 3"
+      />
+      <div class="service__description">
+        <h2>Indická masáž hlavy</h2>
+        <p>
+          Velmi pomáhá snižovat stres a ačkoliv se nazývá masáž hlavy,
+          zahrnujeme i záda, ramena a paže.
+        </p>
+        <p>
+          Tato masáž je vhodná pro firemní klienty, jelikož není invazivní a
+          není třeba se svlékat.
+        </p>
+        <p>
+          Mezi fyzické výhody této masáže patří: uvolnění napjatých svalů,
+          uvolňuje ramena a tím i zlepšuje postoj těla.
+        </p>
+      </div>
+
+      <div class="service">
+        <img
+          class="service__image"
+          src="/Images/Jaras/Hand_massage.jpg"
+          alt="Massage 4"
+        />
+        <div class="service__description">
+          <h2>Švédská masáž</h2>
+          <!-- <p>
+            Tato masáž je založena na technice Dr. Voddera. Lymfatická masáž pomáhá
+            lidem s lymfedémem, fibromyalgií a dalšími zdravotními problémy.
+          </p>
+          <p>
+            Jedná se o formu jemné masáže, která podporuje proudění lymfatické
+            tekutiny po těle.
+          </p>
+          <p>
+            Lymfatický systém pomáhá odstraňovat škodlivé látky a toxiny z těla.
+          </p> -->
+        </div>
+    </div>
   </div>
 
   <h2>Další</h2>
   <p>Nabízím další služby, jako jsou:</p>
 
   <ul class="other-services">
-    <li>Holistická terapie</li>
+    <li>Onkologická masáž</li>
     <li>Voskování uší</li>
-    <li>Masáž pro seniory se specifickými problémy</li>
-    <li>Onkologická masáž (již brzy)</li>
-    <li>Baňkování</li>
-    <li>Masáž pro lidi se stařeckou demencí</li>
-    <li>Výuka masáží miminek (již brzy)</li>
+    <li>Masáž pro seniory</li>
   </ul>
 </section>
